# gdbus-codegen-glibmm

./: .travis.yml  AUTHORS  CONTRIBUTING.md  MANIFEST.in  README.md  gdbus-codegen-glibmm.py  setup.py
cmake-files/: gdbus-codegen-glibmm-config-version.cmake.in
codegen/: codegen.py  codegen_main.py  config.py  dbustypes.py
codegen_glibmm/: __init__.py  codegen.py  codegen_main.py  dbustypes.py  parser.py
codegen_glibmm/templates/: common.cpp.templ  common.h.templ  proxy.cpp.templ  proxy.h.templ  stub.cpp.templ  stub.h.templ
test/: runtests.sh
test/common/: another-service.xml  many-types.xml  tools.h
test/proxy/: CMakeLists.txt  testproxymain.cpp  testproxymain.h
test/stub/: CMakeLists.txt  teststubmain.cpp  teststubmain.h
tests/: test_generation.py
tests/data/error_namespace/: input_common.cpp  input_common.h
tests/data/many-types/: input.xml  input_common.cpp  input_common.h  input_proxy.cpp  input_proxy.h  input_stub.cpp  input_stub.h
tests/data/simple/: input.xml  input_common.cpp  input_common.h  input_proxy.cpp  input_proxy.h  input_stub.cpp  input_stub.h
tests/integration/: runtests.sh
tests/integration/common/: many-types.xml
tests/integration/proxy/: CMakeLists.txt  testproxymain.cpp  testproxymain.h
tests/integration/stub/: teststubmain.cpp  teststubmain.h
